# kde-widget-quran

./: .gitignore  README.md  metadata.json
.github/workflows/: ci.yml
contents/config/: main.xml
contents/js/data/: CuratedReciters.js  SurahMeta.js
contents/js/services/: HotkeyBridge.js  PlaybackController.js  ProviderQuranCom.js  Storage.js  Telemetry.js
contents/ui/: main.qml
contents/ui/components/: CircularProgressBar.qml  MprisBridge.qml  ProControls.qml  QueueList.qml  RangePicker.qml  ReadableComboBox.qml  StyledTabButton.qml  SurfaceCard.qml  TransportControls.qml
contents/ui/config/: GeneralConfig.qml  config.qml
contents/ui/models/: PlaybackManager.qml  QueueModel.qml  qmldir
contents/ui/views/: DesktopExpanded.qml  LibraryPage.qml  PanelCompact.qml  PlayerPage.qml  SettingsPage.qml
docs/: UI_REDESIGN.md  WIDGET_PLAN.md
packaging/: PKGBUILD
plans/: quran-player-rivojlantirish-rejasi.md
plugin/: CMakeLists.txt  mprisadaptor.cpp  mprisadaptor.h  mprisplayeradaptor.cpp  mprisplayeradaptor.h  mprisplugin.cpp  mprisplugin.h
scripts/: build-plugin.sh  build.sh  extract-translations.sh  install-local.sh  package.sh  smoke-check.sh
translations/: ar.po  en.po  template.pot  uz.po
